# Antrack

./: .gitignore  AGENTS.md  README.md  history.txt  pyproject.toml  settings.txt  todo.txt
data/: stations.txt
data/TLE/: celestrak_active.tle  celestrak_amateur.tle  celestrak_stations.tle  celestrak_weather.tle
data/radiosources/: Pulsars_atnf.csv
docs/: cpu_optimized.md
docs/prd/: 00_conventions.md  00_task_tracking_policy.md  CODEX_PROMPT_PHASE1.md  CODEX_PROMPT_PHASE1_1.md  PRD.md  README.md  tasks_current.md  tasks_phase1_0.md
docs/prd/10_architecture/: data_and_paths.md  module_boundaries.md  overview.md  package_layout.md  runtime_environment.md
docs/prd/20_refactor/: codebase_findings.md  (+6 more)
src/antrack/: app_info.py  main.py  settings.cfg
src/data/: gp.php
tests/: test.py  test_antenna_connection_config.py  test_antenna_controller_facade.py  test_app_info.py  test_axis_client_polling_adapter.py  test_axis_driver_backend_fake_serial.py  test_axis_driver_tracking_safety.py  test_axis_operational_status.py  test_axis_position_conversion.py  test_axis_protocol.py  test_connection_ui_helpers.py  test_ephemeris_service.py  test_modbus_rtu.py  test_motion_refresh.py  test_noise_measurement.py  test_paths.py  test_powermeter_client.py  test_pstrotator_backend_fake_udp.py  test_pstrotator_tracking_absolute.py  test_rate_estimator.py  test_rs485_diagnostics.py  test_rs485_monitor.py  test_scan_strategies.py  test_sdr_client.py  test_sdr_noise_metrics.py  test_thread_manager.py  test_tle_repository.py  test_tracking_diagnostics.py  test_tracking_manager.py
(+105 files in other folders)
