[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antrack"
version = "2.01"
authors = [{name = "Stephane REY"}]
description = "Antenna tracking and control application"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "PyQt5>=5.15,<6",
  "qasync>=0.27,<1",
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "skyfield>=1.49,<2",
  "matplotlib>=3.8,<4",
  "pyqtgraph>=0.13,<1",
  "spiceypy",
  "pyserial",
]

[project.scripts]
antrack = "antrack.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["antrack*"]
